updated phone input

--- a/package.json
+++ b/package.json
@@ -17,9 +17,11 @@
     "axios": "^1.13.4",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "libphonenumber-js": "^1.12.37",
     "lucide-react": "^0.562.0",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
+    "react-phone-number-input": "^3.4.16",
     "react-redux": "^9.2.0",
     "react-router-dom": "^7.11.0",
     "shadcn": "^3.6.3",
